clusters/helheim/core/envoy-gateway/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    cert-manager.io/issue-temporary-certificate: "true"
    external-dns.alpha.kubernetes.io/target: "ip.houseofix.online"
spec:
  gatewayClassName: envoy
  listeners:
    - name: jellyfin-https
      protocol: HTTPS
      port: 443
      hostname: "jellyfin.houseofix.online"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-tls-cert
            namespace: envoy-gateway
    - name: argocd-https
      protocol: HTTPS
      port: 443
      hostname: "argocd.houseofix.online"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-tls-cert
            namespace: envoy-gateway
    - name: tunnel-http
      protocol: HTTP
      port: 8080
      hostname: "*.houseofix.online"
      allowedRoutes:
        namespaces:
          from: All
